# 2DGameEngine

./: .gitignore  CMakeLists.txt  Makefile  README.md  vcpkg.json
src/: Animation.cpp  Animation.h  AssetManager.cpp  AssetManager.h  CMakeLists.txt  Component.h  Constants.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  Main.cpp  TextureManager.cpp  TextureManager.h  Types.h
src/Components/: AnimatedSpriteComponent.cpp  AnimatedSpriteComponent.h  CMakeLists.txt  KeyboardControlComponent.h  PlayerControlComponent.cpp  PlayerControlComponent.h  SpriteComponent.h  TransformComponent.h
src/Managers/: AssetManager.cpp  AssetManager.h  CMakeLists.txt  EntityManager.h  InputManager.cpp  InputManager.h  TextureManager.cpp  TextureManager.h
